  Wrath Forges are now more expensive to operate.
  A few bug fixes for the Router GUI, and the auto-ejector.
  Slots.
  Nerfed wrathforge. It's no longer refuelable, and will last for 36 blocks
  Silver ore nodes are now evenly distributed in every 5 chunks

  More Electricity:
    The battery block is made using acid & lead. When crafted, it will be fully charged. They do not stack. Battery blocks keep their charge when broken. They are used to craft magnets, which are used in motors. A battery block can't charge another battery block.
    The Grinder is the first step of the ore processing chain. A second use for diamond shards!
    Also there is the Mixer, which is used for water-based recipes
    Crystallizer; its recipes require 1 material, and a fluid to suspend them in. The fluid is not used up. It needs to be heated to get started. It takes 20 minutes to complete a recipe.


0.4.0 -- Secretly Updated!
  Electricity:
    Solar turbines, reflective mirrors, heaters, wires, charge meters
    Solar turbines require a few reflective mirrors facing towards it on the same y-level, and a water source block underneath. 4 mirrors will produce enough electric charge to power a heater.
    The heater allows you to run vanilla furnaces & slag furnaces without fuel. Place a heater adjacent to a furnace to heat it. A properly heated furnace will cook faster than normal. You can put more than one heater touching a furnace for extra speed.
    The wires are called "Soldering Wire". Since it's very weak structurally, it must be supported by a block (or supported by a wire that is directly supported).
    A Charge Meter will tell you how much charge is at conductor, how many conductors are connected, and what the average charge on them is.

  Wrath Fire now treats other netherbrickblocks properly
  Using more ore dict.
  Added ejection router upgrade. You'll need to use the filter upgrade with it.

0.3.2 -- Upgraded!
  In brief: Mecha-upgrades, and Router upgrades.
