@@ -3,8 +3,7 @@
   "modid": "factorization",
   "name": "Factorization",
   "description": "",
-  "version": "",
-  "mcversion": "1.2.5",
+  "mcversion": "1.3.2",
   "url": "http://minecraftforum.net/topic/1351802-",
   "updateUrl": "",
   "authors": [
