@@ -285,6 +285,12 @@ public class Registry implements ICraftingHandler, IWorldGenerator, ITickHandler
     }
 
     void makeRecipes() {
+        recipe(new ItemStack(Block.stoneDoubleSlab, 2, 6),
+                " - ",
+                "-S-",
+                " - ",
+                '-', new ItemStack(Block.stoneSingleSlab, 1, 0),
+                'S', Block.stone);
         shapelessRecipe(new ItemStack(dark_iron, 4), dark_iron_block_item);
         recipe(dark_iron_block_item,
                 "II",
