@@ -10,6 +10,7 @@
   Slots.
   Nerfed wrathforge. It's no longer refuelable, and will last for 36 blocks
   Silver ore nodes are now evenly distributed in every 5 chunks
+  Created a recipe for stone slabs
 
   More Electricity:
     The battery block is made using acid & lead. When crafted, it will be fully charged. They do not stack. Battery blocks keep their charge when broken. They are used to craft magnets, which are used in motors. A battery block can't charge another battery block.
